--- a/launchSettings.json
+++ b/launchSettings.json
@@ -7,7 +7,9 @@
         "accountservice": "StartDebugging",
         "apigateway": "StartDebugging",
         "atmservice": "StartDebugging",
-        "authservice": "StartDebugging"
+        "authservice": "StartDebugging",
+        "accountdb": "StartWithoutDebugging",
+        "atmdb": "StartWithoutDebugging"
       }
     }
   }
