--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,10 +17,11 @@ jobs:
     - name: Configure SSH
       run: |
         mkdir -p $HOME/.ssh
-        echo "${{ secrets.SSH_PRIVATE_KEY | replace('\r', '') }}" > $HOME/.ssh/id_rsa
+        echo -e "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' > $HOME/.ssh/id_rsa
         chmod 600 $HOME/.ssh/id_rsa
         ssh-keyscan -H ${{ secrets.EC2_INSTANCE_IP }} >> $HOME/.ssh/known_hosts
         chmod 644 $HOME/.ssh/known_hosts
+    
 
     - name: Deploy to EC2
       run: |
