--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,4 +25,4 @@ jobs:
 
     - name: Deploy to EC2
       run: |
-        ssh -i $HOME/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.EC2_SSH_USERNAME }}@${{ secrets.EC2_INSTANCE_IP }} 'bash -s' < deploy.sh
+        ssh -i $HOME/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.EC2_SSH_USERNAME }}@${{ secrets.EC2_INSTANCE_IP }} 'bash -s' < ~/deploy.sh
