--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -25,5 +25,5 @@ jobs:
 
     - name: Deploy to EC2
       run: |
-        ssh -i $HOME/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.EC2_SSH_USERNAME }}@${{ secrets.EC2_INSTANCE_IP }} 'cd /home/ubuntu/docker-apps && bash -s' < home/ubuntu/deploy.sh
+        ssh -i $HOME/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.EC2_SSH_USERNAME }}@${{ secrets.EC2_INSTANCE_IP }} 'cd /home/ubuntu/docker-apps && bash -s' < deploy.sh
 
