--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,16 +14,39 @@ jobs:
     - name: Checkout repository
       uses: actions/checkout@v2
 
-    - name: Configure SSH
-      run: |
-        mkdir -p $HOME/.ssh
-        echo -e "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' > $HOME/.ssh/id_rsa
-        chmod 600 $HOME/.ssh/id_rsa
-        ssh-keyscan -H ${{ secrets.EC2_INSTANCE_IP }} >> $HOME/.ssh/known_hosts
-        chmod 644 $HOME/.ssh/known_hosts
+    # - name: Configure SSH
+    #   run: |
+    #     mkdir -p $HOME/.ssh
+    #     echo -e "${{ secrets.SSH_PRIVATE_KEY }}" | tr -d '\r' > $HOME/.ssh/id_rsa
+    #     chmod 600 $HOME/.ssh/id_rsa
+    #     ssh-keyscan -H ${{ secrets.EC2_INSTANCE_IP }} >> $HOME/.ssh/known_hosts
+    #     chmod 644 $HOME/.ssh/known_hosts
     
 
-    - name: Deploy to EC2
+    # - name: Deploy to EC2
+    #   run: |
+    #     ssh -i $HOME/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.EC2_SSH_USERNAME }}@${{ secrets.EC2_INSTANCE_IP }} 'cd /home/ubuntu/docker-apps && bash -s' < deploy.sh
+
+
+    - name: Build & Deploy
+      env:
+            PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+            HOSTNAME: ${{secrets.EC2_INSTANCE_IP}}
+            USER_NAME: ${{secrets.EC2_SSH_USERNAME}}
+      
       run: |
-        ssh -i $HOME/.ssh/id_rsa -o StrictHostKeyChecking=no ${{ secrets.EC2_SSH_USERNAME }}@${{ secrets.EC2_INSTANCE_IP }} 'cd /home/ubuntu/docker-apps && bash -s' < deploy.sh
+          echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+          ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
+
+            # Now we have got the access of EC2 and we will start the deploy .
+            cd /home/ubuntu/docker-apps/EzyCashManager &&
+            # Stop and remove existing Docker Compose services
+            docker-compose down
+            
+            # Pull the latest Docker images
+            docker-compose pull
+            
+            # Start the services
+            docker-compose up -d    
+            '
 
