--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,12 +41,12 @@ jobs:
             # Now we have got the access of EC2 and we will start the deploy .
             cd /home/ubuntu/docker-apps/EzyCashManager &&
             # Stop and remove existing Docker Compose services
-            docker-compose down
+            sudo docker-compose down
             
             # Pull the latest Docker images
-            docker-compose pull
+            sudo docker-compose pull
             
             # Start the services
-            docker-compose up -d    
+            sudo docker-compose up -d    
             '
 
