--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -20,8 +20,5 @@ jobs:
 
     - name: Build and push Docker images
       run: |
-        echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-
-        docker-compose build
-
-        docker-compose push
+        echo "$DOCKER_PASSWORD" | docker login
+        
