--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -89,7 +89,7 @@ services:
       context: .
       dockerfile: Frontend/Dockerfile
     working_dir: /app
-    command: sh -c "npm install && npm start"
+    command: sh -c "npm start"
     volumes:
       - ./Frontend:/app
     ports:
