--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,46 +1,46 @@
-name: Deployment
+# name: Deployment
 
-on:
-  workflow_run:
-    workflows: ["CI/CD Pipeline"]
-    types:
-      - completed
+# on:
+#   workflow_run:
+#     workflows: ["CI/CD Pipeline"]
+#     types:
+#       - completed
 
-jobs:
-  deploy-to-ec2:
-    runs-on: ubuntu-latest
+# jobs:
+#   deploy-to-ec2:
+#     runs-on: ubuntu-latest
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+#     steps:
+#     - name: Checkout repository
+#       uses: actions/checkout@v2
     
-    - name: Deploy to EC2
-      env:
-        PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-        HOSTNAME: ${{secrets.EC2_INSTANCE_IP}}
-        USER_NAME: ${{secrets.EC2_SSH_USERNAME}}
-      run: |
+#     - name: Deploy to EC2
+#       env:
+#         PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+#         HOSTNAME: ${{secrets.EC2_INSTANCE_IP}}
+#         USER_NAME: ${{secrets.EC2_SSH_USERNAME}}
+#       run: |
      
-    - name: Build & Deploy
-      env:
-                PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
-                HOSTNAME: ${{secrets.EC2_INSTANCE_IP}}
-                USER_NAME: ${{secrets.EC2_SSH_USERNAME}}
+#     - name: Build & Deploy
+#       env:
+#                 PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+#                 HOSTNAME: ${{secrets.EC2_INSTANCE_IP}}
+#                 USER_NAME: ${{secrets.EC2_SSH_USERNAME}}
 
-      run: |
-            echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
-            ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
+#       run: |
+#             echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+#             ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
 
-                # Now we have got the access of EC2 and we will start the deploy .
-                cd /home/ubuntu/docker-apps/EzyCashManager &&
-                # Stop and remove existing Docker Compose services
-                sudo docker-compose down &&
+#                 # Now we have got the access of EC2 and we will start the deploy .
+#                 cd /home/ubuntu/docker-apps/EzyCashManager &&
+#                 # Stop and remove existing Docker Compose services
+#                 sudo docker-compose down &&
                 
-                # Pull the latest Docker images
-                sudo docker-compose pull &&
+#                 # Pull the latest Docker images
+#                 sudo docker-compose pull &&
                 
-                # Start the services
-                sudo docker-compose up -d  
-                '
+#                 # Start the services
+#                 sudo docker-compose up -d  
+#                 '
 
     
