--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -40,14 +40,25 @@ jobs:
     - name: Checkout Repository
       uses: actions/checkout@v2
 
-    - name: SSH into EC2
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.EC2_HOST }}
-        username: ${{ secrets.EC2_USERNAME }}
-        key: ${{ secrets.EC2_SSH_KEY }}
-        script: |
-          cd /var/www/EzyCashManager
-          git pull origin master
-          docker-compose pull
-          docker-compose up -d
+    - name:  Deploy to EC2
+      env:
+                PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
+                HOSTNAME: ${{secrets.EC2_HOST}}
+                USER_NAME: ${{secrets.EC2_USERNAME}}
+
+      run: |
+            echo "$PRIVATE_KEY" > private_key && chmod 600 private_key
+            ssh -o StrictHostKeyChecking=no -i private_key ${USER_NAME}@${HOSTNAME} '
+
+            # Run this on EC2
+            cd /var/www/EzyCashManager &&
+            
+            # Stop & remove existing Docker Compose services
+            sudo docker-compose down &&
+            
+            # Pull the latest Docker images
+            sudo docker-compose pull &&
+            
+            # Start the services
+            sudo docker-compose up -d  
+            '
