--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -43,6 +43,7 @@
     "not op_mini all"
   ],
   "dependencies": {
+    "@auth-kit/react-router": "^3.0.2-alpha.19",
     "@fortawesome/fontawesome-free": "6.5.1",
     "axios": "^1.6.7",
     "bootstrap": "4.6.2",
